--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,4 @@
-server.port=8080
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
-spring.datasource.url=jdbc:mysql://localhost:3306/frases?useTimezone=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=${JDBC_DATASOURCE_URL}
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.generate-ddl=true
